--- a/pru.html
+++ b/pru.html
@@ -81,8 +81,8 @@
     下面三個條件皆須符合
     <ul>
     <li>綠角塊在紅角塊的U方向，或綠角塊在紅角塊的D方向</li>
-    <li>紅角塊的F方向若有角塊，則必是白角塊</li>
-    <li>紅角塊的B方向若有角塊，則不是白角塊</li>
+    <li>若紅角塊的F方向有角塊，則必是白角塊</li>
+    <li>若紅角塊的B方向有角塊，則不是白角塊</li>
     </ul>
     使用轉動F' R' F U' R2 U F' R F
     <br>
