--- a/3pairs_a.html
+++ b/3pairs_a.html
@@ -173,12 +173,13 @@
 </table>
 <p>
 
-用<span class="ibx">X</span>面上的顏色做判別。<span class="pu">&emsp;</span>表示要組新pair的角塊，即原本顏色為<span class="bl">&emsp;</span><span class="re">&emsp;</span><span class="wh">&emsp;</span>的那一個角塊。
+用下面<span class="ibx">X</span>面上的顏色做判別。<span class="pu">&emsp;</span>表示要組新pair的角塊，即原本顏色為<span class="bl">&emsp;</span><span class="re">&emsp;</span><span class="wh">&emsp;</span>的那一個角塊。
 <p>
 <table>
 <caption>兩個<span class="ibx">X</span>面上的顏色型態名稱</caption>
 <tr>
   <th>
+  名稱
   </th>
   <th>
   S型
@@ -273,7 +274,8 @@ z形
 </div>
 
 <h2>一些組第3個「好」pair的轉動</h2>
-下面組第3個好pair的轉動也都有一個鏡像，這裡只列出前3個，其餘類推，全都是把旋轉R換成U'，旋轉R'換成U，旋轉U換成R'，旋轉U'換成R
+下面組第3個好pair的轉動也都有一個鏡像，全都是把旋轉R換成U'，旋轉R'換成U，旋轉U換成R'，旋轉U'換成R
+<p>
 <table>
 <caption>組pair轉動元素表</caption>
 <tr>
@@ -300,22 +302,24 @@ z形
   Case 1, S型
   </th>
   <td>
-  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:UB RBD:DRB|alg=U R2'|setupmoves=U' R"></div>
-<br>
-  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULF x:UR x:URF DR:UB RBD:FRD|alg=R' U2|setupmoves=U R U R2 U2' R'  U">鏡像</div>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:UB RBD:DRB|alg=U R2'|setupmoves=U' R"></div>
+    <br>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULF x:UR x:URF DR:UB RBD:FRD|alg=R' U2|setupmoves=U R U R2 U2' R'  U">鏡像</div>
   </td>
   <td>
-  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:BR RBD:DRB|alg=U R U' R|setupmoves=U' R2"></div>
-<br>
-  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULF x:UR x:URF DR:UF RBD:FRD|alg=R' U' R U'|setupmoves=U R U R2 U2' R'">鏡像</div>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:BR RBD:DRB|alg=U R U' R|setupmoves=U' R2"></div>
+    <br>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULF x:UR x:URF DR:UF RBD:FRD|alg=R' U' R U'|setupmoves=U R U R2 U2' R'">鏡像</div>
   </td>
   <td>
-  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:UF RBD:DRB|alg=U' R'|setupmoves=U'"></div>
-<br>
-  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULF x:UR x:URF DR:BR RBD:FRD|alg=R U|setupmoves=U R U R2 U2' R' U2">鏡像</div>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:UF RBD:DRB|alg=U' R'|setupmoves=U'"></div>
+    <br>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULF x:UR x:URF DR:BR RBD:FRD|alg=R U|setupmoves=U R U R2 U2' R' U2">鏡像</div>
   </td>
   <td>
-  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:FR RBD:DRB|alg=U' R2|setupmoves=U' R"></div>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:FR RBD:DRB|alg=U' R2|setupmoves=U' R"></div>
+    <br>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:FR RBD:DRB|alg=R U2'|setupmoves=U' R'  U R2 U2' R'  U2">鏡像</div>
   </td>
   <td>
   </td>
@@ -325,15 +329,21 @@ z形
   Case 3, S型
   </th>
   <td>
-      <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:UB BDR:DRB|alg=U R|setupmoves=U' R'"></div>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:UB BDR:DRB|alg=U R|setupmoves=U' R'"></div>
+    <br>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:UF BDR:DRB|alg=R' U'|setupmoves=U' R  U R2 U2' R'  U2">鏡像</div>
   </td>
   <td>
-      <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:BR BDR:DRB|alg=U R2 U2'|setupmoves=U' R2"></div>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:BR BDR:DRB|alg=U R2 U2'|setupmoves=U' R2"></div>
+    <br>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:BR BDR:DRB|alg=R' U2' R2|setupmoves=U' R  U R2 U2' R'  U'">鏡像</div>
   </td>
   <td>
   </td>
   <td>
-      <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:FR BDR:DRB|alg=U'|setupmoves=U' R2"></div>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:FR BDR:DRB|alg=U'|setupmoves=U' R2"></div>
+    <br>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:DR BDR:DRB|alg=R|setupmoves=U' R  U R2 U2' R'  U'">鏡像</div>
   </td>
   <td>
   </td>
@@ -343,14 +353,18 @@ z形
   Case 3, R型
   </th>
   <td>
-      <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:UB BDR:DRB|alg=U' R' U2' R|setupmoves=U' R'"></div>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:UB BDR:DRB|alg=U' R' U2' R|setupmoves=U' R'"></div>
+    <br>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:UF BDR:DRB|alg=R U R2 U'|setupmoves=U' R  U R2 U2' R'  U2">鏡像</div>
   </td>
   <td>
   </td>
   <td>
   </td>
   <td>
-      <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:FR BDR:DRB|alg=U R2' U'|setupmoves=U'"></div>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:FR BDR:DRB|alg=U R2' U'|setupmoves=U'"></div>
+    <br>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:DR BDR:DRB|alg=R' U2 R|setupmoves=U' R  U R2 U2' R'  U">鏡像</div>
   </td>
   <td>
   </td>
@@ -364,10 +378,14 @@ z形
   <td>
   </td>
   <td>
-  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:UF DRB:DRB|alg=U' R2 U|setupmoves=U' R'"></div>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:UF DRB:DRB|alg=U' R2 U|setupmoves=U' R'"></div>
+    <br>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:FR DRB:DRB|alg=R U2' R'|setupmoves=U'  U R2 U2' R'  U">鏡像</div>
   </td>
   <td>
-  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:FR DRB:DRB|alg=U' R' U|setupmoves=U' R'"></div>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:FR DRB:DRB|alg=U' R' U|setupmoves=U' R'"></div>
+    <br>
+    <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:UB DRB:DRB|alg=R U R'|setupmoves=U'  U R2 U2' R'  U">鏡像</div>
   </td>
   <td>
   </td>
@@ -524,19 +542,19 @@ z形
   Case 1, F型
   </th>
   <td>
-  M'1a
+  M'1a (前往y形)
   </td>
   <td>
-  N1a
+  N1a (前往y形)
   </td>
   <td>
-  M'1a
+  M'1a (前往w形)
   </td>
   <td>
-  M1a
+  M1a (前往v形)
   </td>
   <td>
-  M'1a
+  M'1a (前往x形)
   </td>
   <td>
   Case 1, S型
@@ -555,7 +573,7 @@ z形
   <td>
   </td>
   <td>
-  M3
+  M3 (前往y形)
   </td>
   <td>
   Case 2, F型
@@ -566,19 +584,19 @@ z形
   Case 1, R型
   </th>
   <td>
-  M2
+  M2 (前往y形)
   </td>
   <td>
-  M2
+  M2 (前往v形)
   </td>
   <td>
-  M'2
+  M'2 (前往y形)
   </td>
   <td>
-  M'2
+  M'2 (前往v形)
   </td>
   <td>
-  N2
+  N2 (前往y形)
   </td>
   <td>
   Case 3, S型
@@ -589,19 +607,19 @@ z形
   Case 3, F型
   </th>
   <td>
-  N'3
+  N'3 (前往y形)
   </td>
   <td>
-  M3
+  M3 (前往x形)
   </td>
   <td>
-  M'3
+  M'3 (前往y形)
   </td>
   <td>
-  N'3
+  N'3 (前往v形)
   </td>
   <td>
-  M3
+  M3 (前往y形)
   </td>
   <td>
   Case 3, S型
@@ -616,12 +634,12 @@ z形
   <td>
   </td>
   <td>
-  M'1a
+  M'1a (前往w形)
   </td>
   <td>
   </td>
   <td>
-  M1a
+  M1a (前往y形)
   </td>
   <td>
   Case 2, F型
@@ -635,14 +653,20 @@ z形
   </td>
   <td>
   M'2
+  <br>
+  (前往Case 1, S型, w形)
   </td>
   <td>
   N'2
+  <br>
+  (前往Case 1, S型, v形)
   </td>
   <td>
   </td>
   <td>
   M3
+  <br>
+  (前往Case 3, R型, y形)
   </td>
   <td>
 
@@ -653,10 +677,10 @@ z形
   Case 2, F型
   </th>
   <td>
-  M'1a
+  M'1a (前往y形)
   </td>
   <td>
-  N2
+  N2 (前往z形)
   </td>
   <td>
   </td>
@@ -673,19 +697,19 @@ z形
   Case 2, R型
   </th>
   <td>
-  M'1a
+  M'1a (前往y形)
   </td>
   <td>
-  M'1a
+  M'1a (前往v形)
   </td>
   <td>
-  N'1b
+  N'1b (前往y形)
   </td>
   <td>
-  M1b
+  M1b (前往y形)
   </td>
   <td>
-  M1b
+  M1b (前往v形)
   </td>
   <td>
   Case 3, R型
@@ -697,18 +721,28 @@ z形
   </th>
   <td>
   N'3
+  <br>
+  (前往Case 1, F型, y形)
   </td>
   <td>
   N'3
+  <br>
+  (前往Case 1, F型, w形)
   </td>
   <td>
   N'3
+  <br>
+  (前往Case 1, F型, z形)
   </td>
   <td>
   N1a
+  <br>
+  (前往Case 3, F型, w形)
   </td>
   <td>
   M2
+  <br>
+  (前往Case 2, R型, z形)
   </td>
   <td>
   </td>
