--- a/pru.html
+++ b/pru.html
@@ -16,14 +16,12 @@
 <h1>進入保留2個pairs的&lt;R, U &gt;</h1>
 
 <h2>前言</h2>
-這個步驟不但要在保留已完成的2個pair下組成完整無缺的2x2x3區塊，如下
-<br>
-其中<span class="iwx">X</span>的部份為已做好的2個pair。
+這個步驟不但要在保留已完成的2個pair下組成完整無缺的2x2x3區塊，如下圖，其中<span class="iwx">X</span>的部份為已做好的2個pair，
 <p>
 <div class="roofpig rp180" data-config="base=F5|colored=FUR- F U R DF DLF|solved=FUR-/ce FL|tweaks=x:UL x:ULB x:UR x:URB|setupmoves=U' F' R' F U' R2 U F' R F">圖1</div>
 &rarr;
 <div class="roofpig rp180" data-config="base=F5|colored=FUR- F U R DF DLF|solved=FUR-/ce FL|tweaks=x:UL x:ULB x:UR x:URB|setupmoves=U'">圖2</div>
-<p>
+<br>
 還要順便進入&lt;R, U&gt;
 
 <h2>命名、判斷方式與分類</h2>
