--- a/exblock.html
+++ b/exblock.html
@@ -72,7 +72,7 @@
 </div>
 
 <h2>全部還原</h2>
-當你已依照之前說明拓展成1個1x2x2的區塊及3個pair，在不破壞那1個1x2x2區塊和3個pair的狀況下，接下來就只有一條路可以轉動，順著唯一的那條路就可到全部全部還原的狀態
+當你已依照之前說明拓展成1個1x2x2的區塊及3個pair，在不破壞那1個1x2x2區塊和3個pair的狀況下，接下來就只有一條路可以轉動，順著唯一的那條路就可到全部還原的狀態
 
 <h2>範例</h2>
 <div class="roofpig rp180" data-config="base=F5|solved=UR-/ce|alg=U R2 U' R' U' R' U2' R U R U R2 U' R2' U|setupmoves=U' R2 U R U' R' U' R' U R U2 R' U2' R2' U R2 R2 U R2 U2 R' U' R|tweaks=x:UL x:ULB x:UR x:URB x:DR x:DRB x:URF x:UF"></div>
