--- a/twistedge.html
+++ b/twistedge.html
@@ -127,7 +127,10 @@
 </div>
 
 <h2>範例</h2>
+<!--
 <div class="roofpig rp180" data-config="base=F5|colored=FUR- F U R UL ULB|solved=FUR-/ce FL|tweaks=U:uF FD:RB|alg=F R2' F'|setupmoves=U' F' R' F U' R2 U F' R F U">範例4</div>
+-->
+<div class="roofpig rp180" data-config="base=F5|colored=FUR- F U R UL ULB UR UF  UB RB RF RD FD|solved=FUR-/ce FL|alg=F' U F F R' F'|setupmoves=U' F' R' F U' R2 U F' R F U  F R2 F' R' F' U2 F  U R U2 R' U R2 U2 R'">範例4</div>
 
 <p>
 下一步：<a href="2pairslack.html">完成第2個pair及2x2x3區塊欠缺的pair</a> <a href="index.html">總目錄</a>
