--- a/3pairs_a.html
+++ b/3pairs_a.html
@@ -293,9 +293,6 @@ z形
   <th>
   y形
   </th>
-  <th>
-  z形
-  </th>
 </tr>
 <tr>
   <th>
@@ -321,8 +318,6 @@ z形
     <br>
     <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:FR RBD:DRB|alg=R U2'|setupmoves=U' R'  U R2 U2' R'  U2">鏡像</div>
   </td>
-  <td>
-  </td>
 </tr>
 <tr>
   <th>
@@ -345,8 +340,6 @@ z形
     <br>
     <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:DR BDR:DRB|alg=R|setupmoves=U' R  U R2 U2' R'  U'">鏡像</div>
   </td>
-  <td>
-  </td>
 </tr>
 <tr>
   <th>
@@ -366,8 +359,6 @@ z形
     <br>
     <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:DR BDR:DRB|alg=R' U2 R|setupmoves=U' R  U R2 U2' R'  U">鏡像</div>
   </td>
-  <td>
-  </td>
 </tr>
 <tr>
   <th>
@@ -386,8 +377,6 @@ z形
     <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:FR DRB:DRB|alg=U' R' U|setupmoves=U' R'"></div>
     <br>
     <div class="roofpig rp180" data-config="base=F5|colored=UR- U R|solved=UR-/ce|tweaks=x:UL x:ULB x:UR x:URB DR:UB DRB:DRB|alg=R U R'|setupmoves=U'  U R2 U2' R'  U">鏡像</div>
-  </td>
-  <td>
   </td>
 </tr>
 </table>
@@ -677,19 +666,23 @@ z形
   Case 2, F型
   </th>
   <td>
-  M'1a (前往y形)
+  M'1a
+  <br>
+  (前往Case 3, S型, y形)
   </td>
   <td>
-  N2 (前往z形)
+  N2
+  <br>
+  (前往Case 2, F型, z形)
   </td>
   <td>
   </td>
   <td>
   </td>
   <td>
+  已完成
   </td>
   <td>
-  Case 3, S型
   </td>
 </tr>
 <tr>
