--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </ul>
 
 <h2>關於我</h2>
-吳宗諺，現為一國中數學教師，個性很宅，不愛說話，卻愛唱歌，喜愛數學及音樂，總覺得數學是門藝術，聽音樂尤其愛聽藍調，愛聽歌手的呼吸。
+吳宗諺，台灣人，現為一國中數學教師，個性很宅，不愛說話，卻愛唱歌，喜愛數學及音樂，總覺得數學是門藝術，聽音樂尤其愛聽藍調，愛聽歌手的呼吸。
 <p>
 印象中小時曾轉過魔術方塊，後來漸漸沒再碰了。直到今年4月才不小心再接觸魔術方塊，在熱忱的趨使下，感謝老天賜與我這個方法。
 <p>
