--- a/exblock.html
+++ b/exblock.html
@@ -20,18 +20,28 @@
 <p>
 這個步驟的所有轉動皆只轉動R, U面，且不破壞之前步驟已做好的4個pair
 <p>
-<div class="roofpig rp180" data-config="base=F5|colored=U UL UB ULB UR-|solved=UR-/ce|tweaks=x:UL x:ULB"></div>
-<div class="roofpig rp180" data-config="base=F5|colored=R DR RB DRB UR-|solved=UR-/ce|tweaks=x:DR x:DRB"></div>
+<div class="roofpig rp180" data-config="base=F5|colored=U UL UB ULB UR-|solved=UR-/ce|tweaks=x:UL x:ULB">block A</div>
+<div class="roofpig rp180" data-config="base=F5|colored=R DR RB DRB UR-|solved=UR-/ce|tweaks=x:DR x:DRB">block B</div>
 
 <h2>4個pair拓展出3個pair和1個1x2x2區塊</h2>
 下面<span class="iwx">X</span>的部份為已做好的pair
 <p>
 
+<dl>
+<dt>選擇組block A</dt>
+<dd>
+<dl>
+<dt>組合邊塊-中心塊pair</dt>
+<dd>
 <div class="hors">
-  組合邊塊-中心塊pair
+  下面兩個皆可使用
   <br>
+  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R UB RB|solved=UR-/ce|alg=U' R2' U R U|setupmoves=U' R2 U R U' R' U' R' U R U2 R' U2' R2' U R2 R2 U R2 U2 R' U' R  R2|tweaks=x:UL x:ULB x:UR x:URB x:DR x:DRB x:URF x:UF"></div>
   <div class="roofpig rp180" data-config="base=F5|colored=UR- U R UB RB|solved=UR-/ce|alg=U R2 U' R' U'|setupmoves=U' R2 U R U' R' U' R' U R U2 R' U2' R2' U R2 R2 U R2 U2 R' U' R|tweaks=x:UL x:ULB x:UR x:URB x:DR x:DRB x:URF x:UF"></div>
 </div>
+</dd>
+<dt>結合兩pair</dt>
+<dd>
 <div class="hors">
   邊塊-中心塊pair在兩舊pair之間
   <br>
@@ -51,14 +61,24 @@
   <br>
   <div class="roofpig rp180" data-config="base=F5|colored=UR- U R UB UL ULB|solved=UR-/ce|alg=U2' R|setupmoves=U' R2 U R U' R' U' R' U R U2 R' U2' R2' U R2 R2 U R2 U2 R' U' R U R2 U' R' U R U2' R' U2' R' U2' R|tweaks=x:UL x:ULB x:UR x:URB x:DR x:DRB x:URF x:UF"></div>
 </div>
-<p>
+</dd>
+</dl>
+</dd>
 
-當然你也可以選擇先組另一個區塊
+<dt>當然你也可以選擇先組block B</dt>
+<dd>
+<dl>
+<dt>組合邊塊-中心塊pair</dt>
+<dd>
 <div class="hors">
-  組合邊塊-中心塊pair
+  下面兩個皆可使用
   <br>
+  <div class="roofpig rp180" data-config="base=F5|colored=UR- U R UB RB|solved=UR-/ce|alg=R U2 R' U' R'|setupmoves=U' R2 U R U' R' U' R' U R U2 R' U2' R2' U R2 R2 U R2 U2 R' U' R  R' U'  U2|tweaks=x:UL x:ULB x:UR x:URB x:DR x:DRB x:URF x:UF"></div>
   <div class="roofpig rp180" data-config="base=F5|colored=UR- U R UB RB|solved=UR-/ce|alg=R' U2' R U R|setupmoves=U' R2 U R U' R' U' R' U R U2 R' U2' R2' U R2 R2 U R2 U2 R' U' R  R' U'|tweaks=x:UL x:ULB x:UR x:URB x:DR x:DRB x:URF x:UF"></div>
 </div>
+</dd>
+<dt>結合兩pair</dt>
+<dd>
 <div class="hors">
   邊塊-中心塊pair在兩舊pair之間
   <br>
@@ -78,6 +98,13 @@
   <br>
   <div class="roofpig rp180" data-config="base=F5|colored=UR- U R RB DR DRB|solved=UR-/ce|alg=R2' U'|setupmoves=U' R2 U R U' R' U' R' U R U2 R' U2' R2' U R2 R2 U R2 U2 R' U' R R' U R U2' R' U' R|tweaks=x:UL x:ULB x:UR x:URB x:DR x:DRB x:URF x:UF"></div>
 </div>
+</dd>
+</dl>
+</dd>
+</dl>
+
+<p>
+若上一步驟選擇組pair A，這裡也選擇先組block A。若上一步驟選擇組pair B，這裡也選擇先組block B。則不會看到有破壞區塊的情形發生
 
 <h2>全部還原</h2>
 當你已依照之前說明拓展成1個1x2x2的區塊及3個pair，在不破壞那1個1x2x2區塊和3個pair的狀況下，接下來就只有一條路可以轉動，順著唯一的那條路就可到全部還原的狀態
